--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -9,9 +9,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title> SensorAct </title>
 		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/style.css'}">
+		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/jquery.noty.css'}">
+		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/noty_theme_twitter.css'}">
 		<script src="@{'/public/js/libs/modernizr-2.0.6.min.js'}"></script>
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+		<script src="@{'/public/javascripts/jquery.noty.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+				<script src="@{'/public/javascripts/utilityFunctions.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+
 		<script type="text/javascript">
 			$(document).ready(function() {
 
@@ -128,6 +133,10 @@
 					sign_in[USERNAME] = sign_in_username;
 					sign_in[PASSWORD] = sign_in_password;
 					//Submit the login details
+
+					//Add Noty to top indicating Loading
+					showNoty("Loading...", "topCenter", false);
+
 					try {
 						$.post(URL_LOGIN_USER, JSON.stringify(sign_in), function(data) {
 							responseFromServer = data;
@@ -137,10 +146,12 @@
 							window.location = URL_HOME;
 
 						} else {
+							$.noty.closeAll()
 							alertError('sign_in_error', responseFromServer[RESPONSE_MESSAGE]);
 						}
 
 					} catch(e) {
+						$.noty.closeAll()
 						alertError('sign_in_error', e);
 					}
 					//}
