Added logging support to add device/login/add device template

--- a/repositoryUserInterface/app/views/Application/display2.html
+++ b/repositoryUserInterface/app/views/Application/display2.html
@@ -45,7 +45,7 @@
 				var chart = new Highcharts.Chart({
 					chart : {
 						renderTo : 'container',
-						type : 'bar',
+						type : 'line',
 						marginRight : 130,
 						marginBottom : 25,
 						useUTC : false,
