--- a/repositoryUserInterface/app/views/Application/device.html
+++ b/repositoryUserInterface/app/views/Application/device.html
@@ -228,7 +228,7 @@
 											var messageToEditDevice = {}
 											messageToEditDevice["devicename"] = deviceToBeEdited;
 											messageToEditDevice[SECRET_KEY] = secretkey;
-											window.location = URL_EDIT_DEVICE + "?devicename=" + deviceToBeEdited + "&isdevice=" + isdevice + "&mode=update";
+											window.location = URL_EDIT_DEVICE +"/"+ deviceToBeEdited + "/" + isdevice + "/update";
 
 										});
 										$('#' + saveAsButton).click(function() {
@@ -239,7 +239,7 @@
 											var messageToEditDevice = {}
 											messageToEditDevice["devicename"] = deviceToBeEdited;
 											messageToEditDevice[SECRET_KEY] = secretkey;
-											window.location = URL_EDIT_DEVICE + "?devicename=" + deviceToBeEdited + "&isdevice=" + isdevice + "&mode=create";
+											window.location = URL_EDIT_DEVICE + "/"+ deviceToBeEdited + "/" + isdevice + "/create";
 
 										});
 										if(deviceOrTemplateDataList[index][DEVICE_ARRAY][i].hasOwnProperty(DEVICE_SENSORS)) {
@@ -334,7 +334,7 @@
 
 				$("#addNewDeviceOrTemplate").click(function() {
 
-					window.location = URL_EDIT_DEVICE + "?devicename=" + FAKE_DEVICE_NAME + "&isdevice=true&mode=create";
+					window.location = URL_EDIT_DEVICE + "/"+ FAKE_DEVICE_NAME + "/true/create";
 					return false;
 				});
 			});
