--- a/repositoryUserInterface/public/stylesheets/style.css
+++ b/repositoryUserInterface/public/stylesheets/style.css
@@ -6,10 +6,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, nav, sectio
 audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 audio:not([controls]) { display: none; }
 [hidden] { display: none; }
+html,body, .wrapper { height: 80%; }
+body .wrapper { height: auto; min-height: 80%; }
 
 html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 body { margin: 0; font-size: 13px; line-height: 1.231; }
-body, button, input, select, textarea { font-family: sans-serif; color: #222; }
+body, button, input, select, textarea  { font-family: sans-serif; color: #222; }
 
 ::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
 ::selection { background: #fe57a1; color: #fff; text-shadow: none; }
@@ -70,9 +72,11 @@ td { vertical-align: top; }
 
 body{ font:16px/24px Helvetica, Helvetica Neue, Arial, sans-serif; }
 
+
 .wrapper{
 	width:90%;
 	margin:0 5%;
+	/*text-align:center;*/
 }
 
 /* ===================
@@ -83,7 +87,10 @@ body{ font:16px/24px Helvetica, Helvetica Neue, Arial, sans-serif; }
 	border-bottom: 20px solid #e44d26; }
 
 
-#footer-container{ border-top:    20px solid #e44d26; }
+#footer-container{ border-top:    20px solid #e44d26;
+clear: both;
+ 
+}
 #main aside      { border-top:    20px solid #e44d26; }
 
 #header-container,
@@ -177,6 +184,7 @@ nav a:hover{
 		margin:0 1.7%;
 		padding:25px 2%;
 		margin-bottom:0;
+		cursor:pointer;
 	}
 	
 	nav li:first-child a{ margin-left:0;  }
@@ -186,7 +194,7 @@ nav a:hover{
     INTERMEDIATE: IE Fixes
    ======================== */
 
-	nav ul li{
+	nav ul li{class="active"
 		display:inline;
 	}	
 	.oldie nav a{
@@ -217,7 +225,7 @@ nav a:hover{
 
 	nav{
 		float:right;
-		width:38%;
+		width:45%;
 	}
 
 /* ============
@@ -256,7 +264,7 @@ nav a:hover{
   abbr[title]:after { content: " (" attr(title) ")"; }
   .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; } 
   pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-  thead { display: table-header-group; }
+  thead { display: tabwidth:50%;le-header-group; }
   tr, img { page-break-inside: avoid; }
   img { max-width: 100% !important; }
   @page { margin: 0.5cm; }
@@ -284,12 +292,12 @@ span{
    src: url('PortLligatSans-Regular.ttf') format("truetype");  
 }
 #logout
-{
+{	font-size:85%;
 	text-decoration:underline;
 	text-align:center;
 	color:yellow;
 	cursor:pointer;
-	
+	padding-left:10px;
 		
 }
 #homeDiv{
@@ -297,5 +305,221 @@ style="border:2px;
 width:75%;
 height:75%;
 clear:both;
-background:url('../images/bgrn.gif');
+/*background:url('../images/bgrn.gif');*/
+}
+.active{
+text-decoration:underline;
+
+}
+
+#accordion button:not(.Tags){
+margin-left:7px;
+float:right;
+clear:both;
+width:110px;
+margin-bottom:7px;
+}width:50%;
+
+#accordion1 button:not(.Tags){
+margin-left:7px;
+float:right;
+clear:both;
+width:110px;
+margin-bottom:7px;
+}width:50%;
+
+.divTags{
+text-align:left;	
+}
+#accordion1,#accordion .Tags{
+margin-left:7px;
+
+}
+
+/* Default settings for the button */
+.google-button {
+display: inline-block;
+min-width: 54px;
+text-align: center;
+color: #555;
+font-size: 11px;
+font-weight: bold;
+height: 27px;
+padding: 0 8px;
+line-height: 27px;
+-webkit-border-radius: 2px;
+-moz-border-radius: 2px;
+border-radius: 2px;
+-webkit-transition: all 0.218s;
+-moz-transition: all 0.218s;
+-ms-transition: all 0.218s;
+-o-transition: all 0.218s;
+transition: all 0.218s;
+border: 1px solid gainsboro;
+border: 1px solid rgba(0, 0, 0, 0.1);
+background-color: whiteSmoke;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
+background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
+background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1);
+background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1);
+background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
+-webkit-user-select: none;
+-moz-user-select: none;
+user-select: none;
+cursor: default;
+}
+
+.google-button:hover {
+border: 1px solid #C6C6C6;
+color: #333;
+
+-webkit-transition: all 0.0s;
+-moz-transition: all 0.0s;
+-ms-transition: all 0.0s;
+-o-transition: all 0.0s;
+transition: all 0.0s;
+background-color: #F8F8F8;
+background-image: -webwidth:50%;kit-gradient(linear,left top,left bottom,from(#f8f8f8),to(#f1f1f1));
+background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+background-image: -moz-linear-gradient(top,#f8f8f8,#f1f1f1);
+background-image: -ms-linear-gradient(top,#f8f8f8,#f1f1f1);
+background-image: -o-linear-gradient(top,#f8f8f8,#f1f1f1);
+background-image: linear-gradient(top,#f8f8f8,#f1f1f1);
+-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+cursor:pointer;
+
+}
+
+.google-button:active {
+background-color: #F6F6F6;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#f6f6f6),to(#f1f1f1));
+background-image: -webkit-linear-gradient(top,#f6f6f6,#f1f1f1);
+background-image: -moz-linear-gradient(top,#f6f6f6,#f1f1f1);
+background-image: -ms-linear-gradient(top,#f6f6f6,#f1f1f1);
+background-image: -o-linear-gradient(top,#f6f6f6,#f1f1f1);
+background-image: linear-gradient(top,#f6f6f6,#f1f1f1);
+-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+
+}
+
+/* If you want a blue button use these styles */
+
+.google-button-blue {
+border: 1px solid #3079ED;
+color: white;
+text-shadow: 0 1px rgba(0, 0, 0, 0.1);
+text-transform: uppercase;
+background-color: #4D90FE;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#4d90fe),to(#4787ed));
+background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
+background-image: -moz-linear-gradient(top,#4d90fe,#4787ed);
+background-image: -ms-linear-gradient(top,#4d90fe,#4787ed);
+background-image: -o-linear-gradient(top,#4d90fe,#4787ed);
+background-image: linear-gradient(top,#4d90fe,#4787ed);
+}
+
+.google-button-blue:hover {
+border: 1px solid #2F5BB7;
+color:black;
+text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+background-color: #357AE8;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#4d90fe),to(#357ae8));
+background-image: -webkit-linear-gradient(top,#4d90fe,#357ae8);
+background-image: -moz-linear-gradient(top,#4d90fe,#357ae8);
+background-image: -ms-linear-gradient(top,#4d90fe,#357ae8);
+background-image: -o-linear-gradient(top,#4d90fe,#357ae8);
+background-image: linear-gradient(top,#4d90fe,#357ae8);
+cursor:pointer;
+
+}
+
+/* If you want a red button use these styles */
+
+.google-button-red {
+border: 1px solid transparent;
+color: #fff;
+text-shadow: 0 1px rgba(0, 0, 0, 0.1);
+text-transform: uppercase;
+background-color: #D14836;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#dd4b39),to(#d14836));
+background-image: -webkit-linear-gradient(top,#dd4b39,#d14836);
+background-image: -moz-linear-gradient(top,#dd4b39,#d14836);
+background-image: -ms-linear-gradient(top,#dd4b39,#d14836);
+background-image: -o-linear-gradient(top,#dd4b39,#d14836);
+background-image: linear-gradient(top,#dd4b39,#d14836);
+font-family: arial, helvetica, sans-serif; 
+}
+
+.google-button-red:active {
+border: 1px solid #992A1B;
+background-color: #B0281A;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#dd4b39),to(#b0281a));
+background-image: -webkit-linear-gradient(top,#dd4b39,#b0281a);
+background-image: -moz-linear-gradient(top,#dd4b39,#b0281a);
+background-image: -ms-linear-gradient(top,#dd4b39,#b0281a);
+background-image: -o-linear-gradient(top,#dd4b39,#b0281a);
+background-image: linear-gradient(top,#dd4b39,#b0281a);
+-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+}
+
+.google-button-red:hover {
+border: 1px solid #B0281A;
+text-decoration:underline;
+text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+background-color: #C53727;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#dd4b39),to(#c53727));
+background-image: -webkit-linear-gradient(top,#dd4b39,#c53727);
+background-image: -moz-linear-gradient(top,#dd4b39,#c53727);
+background-image: -ms-linear-gradient(top,#dd4b39,#c53727);
+background-image: -o-linear-gradient(top,#dd4b39,#c53727);
+background-image: linear-gradient(top,#dd4b39,#c53727);
+-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+-ms-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+-o-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+text-decoration: none;
+-webkit-transition: all 0.0s;
+cursor:pointer;
+
+}
+
+.divTags{
+/*-moz-border-radius: 15px;
+border-radius: 15px;
+background-color:rgb(238, 238, 238);*/
+}
+
+#visualBox{
+text-align:left;
+	
+}
+#visualBox label{
+width:100%;
+
+}
+.errorVisual{
+/*border:1px solid red;*/
+color:red;
+font-size:14px;
+}
+
+.leftDiv{
+float:left;
+width:100%;
+clear:both;
+}
+
+.rightDiv{
+
+}
+.error{
+border: 3px solid #f00;
 }
