--- a/repositoryUserInterface/public/stylesheets/styles_non_centered.css
+++ b/repositoryUserInterface/public/stylesheets/styles_non_centered.css
@@ -33,29 +33,59 @@ div#newSensor
     border-radius: 15px;
     border: 2px solid;
 }
+/*changed padding for this underlying div*/
 div.sensorDiv
 {
-	background: rgb(70,136,71);
-	color: rgb(223,240,216);
-	padding:20px;
+	background: rgb(245,245,245);
+	color: rgb(0,0,0);
+	
+	
+	
+	padding:10px 20px;/*edited this*/
+	
 	-moz-border-radius: 15px;
     -webkit-border-radius: 15px;
     border-radius: 15px;
-    border: 2px solid;
+    /*border: 2px solid;*/
 }
+
+
+/*added these 3 and 1 below*/
+.space
+{
+	padding : 8px 0px 0px 0px;
+	margin:0px;
+	
+}
+.sensorDivPara
+{
+	padding : 0px;
+	margin : 0px;	
+}
+.actuatorDivPara
+{
+	padding : 10px 0px 0px 0px;
+	margin :0px;
+	}
+
+
 div.sensorDiv tr
 {
 	text-align: center;
 }
+/*changed padding for this underlying div*/
 div#newActuator
 {
-	background: rgb(70,136,71);
-	color: rgb(223,240,216);
-	padding:20px;
+	background: rgb(51,51,70);
+	color: rgb(32,0,0);
+	
+	padding:0px 20px 10px 20px;
+	
 	-moz-border-radius: 15px;
     -webkit-border-radius: 15px;
     border-radius: 15px;
     border: 2px solid;
+    color : #FFFFFF;
 }
 div#newActuatorsDiv
 {
@@ -64,8 +94,16 @@ div#newActuatorsDiv
 	-moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-    border: 2px solid;
+   /*commented this  border: 2px solid;*/
 }
+.border
+{
+	border: 2px solid;
+}
+
+/*created a different border class*/
+/*para class also created under div.sensorDiv*/
+
 div#newSensor
 {
 	background: rgb(70,136,71);
