Added Thanks to NSF and DIT

--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -237,7 +237,7 @@
 					<header>
 						<h1 class="newfont">Introducing SensorAct Project</h1>
 						<hr>
-						<video controls="controls"autoplay="autoplay" loop="loop"  poster="http://sandbox.thewikies.com/vfe-generator/images/big-buck-bunny_poster.jpg" width="420" height="315">
+						<video controls="controls"  poster="http://sandbox.thewikies.com/vfe-generator/images/big-buck-bunny_poster.jpg" width="420" height="315">
 							<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" type="video/mp4" />
 							<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" type="video/webm" />
 							<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" type="video/ogg" />
@@ -303,7 +303,7 @@
 
 				<div style="clear:both;" id="footer-container">
 				<footer class="wrapper">
-				<h4 align="center">&copy2012 |MUC,IIIT-Delhi</h4>
+				<h4 align="center">Special Thanks to DeIT and NSF for funding</h4>
 				</footer>
 				</div>
 
